-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25.0.2, 26, 27
-
Component/s: hotspot
-
b05
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8375704 | 26.0.1 | Markus Grönlund | P3 | Resolved | Fixed | b03 |
| JDK-8375283 | 26 | Markus Grönlund | P3 | Resolved | Fixed | b31 |
| JDK-8375723 | 25.0.3-oracle | Markus Grönlund | P3 | Resolved | Fixed | b02 |
| JDK-8377085 | 25.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
java.io.IOException: Not a valid Flight Recorder file. File length is only 0 bytes.
at jdk.jfr/jdk.jfr.internal.consumer.RecordingInput.initialize(RecordingInput.java:93)
at jdk.jfr/jdk.jfr.internal.consumer.RecordingInput.<init>(RecordingInput.java:82)
at jdk.jfr/jdk.jfr.internal.consumer.RecordingInput.<init>(RecordingInput.java:98)
at jdk.jfr/jdk.jfr.internal.consumer.EventFileStream.<init>(EventFileStream.java:49)
at jdk.jfr/jdk.jfr.consumer.EventStream.openFile(EventStream.java:162)
at jdk.jfr.event.oldobject.TestEmergencyDumpAtOOM.test(TestEmergencyDumpAtOOM.java:91)
at jdk.jfr.event.oldobject.TestEmergencyDumpAtOOM.main(TestEmergencyDumpAtOOM.java:114)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
at java.base/java.lang.Thread.run(Thread.java:1474)
Seems the test fails in the case setting additionally -XX:+CrashOnOutOfMemoryError .
In the output some info about a timeout can be seen :
[thread 2730068 also had an error] <----------------------------------------- seems this is the "JFR Periodic Tasks"
------ Timeout during error reporting after 120 s. ------
# [ timer expired, abort... ]
- backported by
-
JDK-8375283 Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented
-
- Resolved
-
-
JDK-8375704 Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented
-
- Resolved
-
-
JDK-8375723 Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented
-
- Resolved
-
-
JDK-8377085 Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented
-
- Resolved
-
- caused by
-
JDK-8364090 Dump JFR recording on CrashOnOutOfMemoryError
-
- Resolved
-
- relates to
-
JDK-8373257 JFR deadlocks JVM during emergency shutdown
-
- Open
-
-
JDK-8227537 JFR: Improve dump generation for OOM
-
- Open
-
- links to
-
Commit(jdk26)
openjdk/jdk/f3bdee89
-
Commit(master)
openjdk/jdk25u-dev/875f4739
-
Commit(master)
openjdk/jdk/f23752a7
-
Review(jdk26)
openjdk/jdk/29203
-
Review(master)
openjdk/jdk25u-dev/214
-
Review(master)
openjdk/jdk/28563
-
Review(master)
openjdk/jdk/29094