8371014: Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented