src/hotspot/share/jfr/jfr.cpp
@@ -156,7 +156,8 @@ void Jfr::on_vm_shutdown(bool emit_old_object_samples, bool emit_event_shutdown,
 }
 
 void Jfr::on_vm_error_report(outputStream* st) {
-  if (JfrRecorder::is_recording()) {
+  assert(!JfrRecorder::is_recording(), "JFR should be stopped at erorr reporting");
+  if (JfrRecorder::is_recording_stopped_with_error()) {
     JfrRepository::on_vm_error_report(st);
   }
 }
